2002-11-19  Fumitoshi UKAI  <ukai@debian.or.jp>

	* ftp.c (ftp_fclose): void return 

2002-11-19  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
	
	* [w3m-dev 03444] download from ftp.
	* file.c (FTPhalfclose: static
		(loadGeneralFile): UFclose
				FTPhalfclose for SCM_FTP
				UFclose before signal back
		(loadImageBuffer): UFclose before signal back
		(openGeneralPagerBuffer): UFclose
	* ftp.c (ftp_fclose): added
		(Ftpfclose): dont read response(), but ftp_fclose()
		(FtpBye): ftp_fclose()

2002-11-19  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03449] Add DOWNLOAD_LIST to doc*/README.func and scripts/w3mhelp.cgi.in
	* doc-jp/README.func (DOWNLOAD_LIST): added
	* doc/README.func (DOWNLOAD_LIST): added
	* scripts/w3mhelp.cgi.in (Miscellany): add ldDL

2002-11-19  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03448] Some fixes
	* url.c (KeyAbort): SIGNAL_RETURN
	* .cvsginore: delete w3mimgsize
	* scripts/.cvsignore: delete xface2xbm
	* scripts/xface2xbm.in: deleted

2002-11-19  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03447] Re: Open download list panel on new tab
	* main.c (download_action): buffer management deleted
		(ldDL): buffer management moved here

2002-11-19  Fumitoshi UKAI  <ukai@debian.or.jp>

	* NEWS: rc: open_tab_dl_list

2002-11-19  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03446] Open download list panel on new tab
	* fm.h (open_tab_dl_list): added
	* main.c (download_action): buffer delete when download done
		(ldDL): open buf in new tab if open_tab_dl_list
	* rc.c (CMT_OPEN_TAB_DL_LIST): added
		(open_tab_dl_list): added

2002-11-19  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03445] download list for "w3m foo.tar.gz"
	* main.c (main): display download list

2002-11-19  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03443] Can't display "echo only_one_line | w3m"
	* display.c (redrawNLine): check 1st line

2002-11-16  Fumitoshi UKAI  <ukai@debian.or.jp>
